# OS-NSU-LABS-1

./: CMakeLists.txt
laboratory-1/: main.c  todo.txt
laboratory-10/: main.c  todo.txt
laboratory-11/: hw.c  main.c  todo.txt
laboratory-18/: main.c  todo.txt
laboratory-19/: main.c  todo.txt
laboratory-2/: main.c
laboratory-3/: main.c  todo.txt
laboratory-4/: list.c  list.h  main.c  todo.txt
laboratory-5/: main.c  todo.txt
laboratory-6/: main.c  todo.txt
laboratory-7/: main.c  todo.txt
laboratory-8/: main.c  todo.txt
laboratory-9/: main.c  todo.txt
